fixing the numbered table, aligning the map better

--- a/src/stylesheets/partials/_maps.sass
+++ b/src/stylesheets/partials/_maps.sass
@@ -2,13 +2,13 @@
   height: 640px
 
 .map-wrap
-  border: 1px solid $filler
+  //border: 1px solid $filler
   //slister start
   //margin-bottom: 1px
   //slister end
   margin-top: 5px
   position: relative
-  width: 968px
+  width: 970px
   .nav-table-wrap p
     padding-left: 10px
     &:last-child
@@ -82,7 +82,7 @@
 .map  
   font-weight: bold  
   height: 500px
-  width: 968px
+  width: 970px
 
   .report-value-marker-true
     color: $primary
