--- a/src/stylesheets/partials/_shared.sass
+++ b/src/stylesheets/partials/_shared.sass
@@ -133,9 +133,10 @@ ul.horizontal
   +pie-clearfix
 
 .filter-bar
-  padding: 15px 15px 40px
+  padding: 15px 15px 30px
   font-size: 11px
   color: #888
+  +pie-clearfix
   > div
     margin-right: 10px
 
@@ -173,12 +174,12 @@ ul.horizontal
     +transition(all 0.3s)
  
 .nice-button
-  padding: 12px 18px 10px 40px
-  +border-radius(3px)
-  +box-shadow($filler - #111 1px 1px 3px inset)
-    
+  border: 1px solid rgba(0, 0, 0, 0.1)
   font: 15px arial !important
+  padding: 12px 18px 10px 40px
   text-decoration: none
+  +border-radius(3px)
+  +box-shadow($filler - #111 1px 1px 2px inset)
   +text-shadow(white 0 1px 0)
     
   &.program
